Wed Jul  5 12:01:49 1995  Ian Lance Taylor  <ian@cygnus.com>

	* symbols.c (S_SET_EXTERNAL): Warn if symbol is weak.
	(S_CLEAR_EXTERNAL): Likewise.
	(S_SET_WEAK): Warn if symbol is global.

	* config/obj-aout.c (obj_aout_frob_symbol): Warn about an attempt
	to put an undefined symbol into a set.

	* Makefile.in: Remove @configure_input@; it's not needed in
	files named Makefile.

	* config/tc-m88k.c (md_pseudo_table): Add ".set" so that the
	explicit pseudo-op works, while continuing to treat "set" as an
	instruction.

	* ecoff.c (ecoff_debugging_seen): New global variable.
	(ecoff_directive_def): Set ecoff_debugging_seen.
	(ecoff_stab): Likewise.
	* ecoff.h: Make idempotent.
	(ecoff_debugging_seen): Declare.
	* config/tc-mips.c: Include ecoff.h.
	(mips_debug): New static variable.
	(s_stringer, s_mips_space): Remove unneeded declarations.
	(md_parse_option): In case 'g', set mips_debug to debugging level.
	(mips_local_label): New function.
	* tc-mips.h (LOCAL_LABEL): Call mips_local_label.
	(mips_local_label): Declare.

Wed Jul  5 00:59:22 1995  Fred Fish  (fnf@cygnus.com)

	* as.c (main):  Only use sbrk when HAVE_SBRK defined.
	* configure.in:  Add test for sbrk.
	* configure:  Regenerate using autoconf 2.4.

Mon Jul  3 15:58:16 1995  Jeff Law  (law@snake.cs.utah.edu)

	* config/tc-hppa.h (MAX_RELOC_EXPANSION): Bump to 6.
	* config/tc-hppa.c (tc_gen_reloc, SOM version): Handle
	relocations for the difference of two (possibly external)
	symbols.
	(hppa_fix_adjustable): For SOM, reject reductions involving
	the difference of two symbols.
	(hppa_force_relocation): Force relocations for expressions
	involving the difference of two symbols.

Mon Jul  3 14:22:59 1995  Steve Chamberlain  <sac@slash.cygnus.com>

	* configure[.in] (i386-*-win32): New host and target.

Thu Jun 29 17:25:43 1995  Steve Chamberlain  <sac@slash.cygnus.com>

	Support for long filenames non-bfd coff. bfd/7288
	* config/obj-coff.c (filename_list_head, filename_list_tail): New.